tests/invalid/generated_binop_pow_int_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: int = 1
    y: bytes = b"hello"
    z = x ** y
